web-infras/parser/tests/fixtures/babel/es2017/async-arrow/parenthesized-rest-array/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,23)
1|var foo = async ([...(foo)]) => {};
 |                     ^
